fix hhvmm docker

--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -1,5 +1,6 @@
 FROM dock0/service
-MAINTAINER todiadiyatmo <me@todiadiyatmo.com>
+MAINTAINER todiadiyatmo <todiadiyatmo@gmail.com>
+EXPOSE 8000
 RUN pacman -S --noconfirm nginx
 RUN mkdir -p /etc/nginx/sites
 ADD run /service/nginx/run
