--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
+hhvm:
+  build: .
+  dockerfile: Dockerfile-hhvm
 nginx:
   build: .
+  dockerfile: Dockerfile-nginx
   volumes:
-    - ~/public_html:/usr/share/nginx/html
-    - ~/config/nginx/nginx.conf:/etc/nginx/nginx.conf
-    - ~/config/nginx/sites:/etc/nginx/sites
+    - ./public_html:/usr/share/nginx/html
+    - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
+    - ./config/nginx/sites:/etc/nginx/sites
   ports:
     - 8000:9000
   links:
    - hhvm
-hhvm:
-  image: diegomarangoni/hhvm:fastcgi
-  volumes:
-    - ~/config/hhvm/php.ini:/etc/hhvm/php.ini
